Refactoring and unit tests
Signed-off-by: Gabriel-Trintinalia <gabriel.trintinalia@consensys.net>